react-app/src/components/LandingPage/LandingPage.css
.landingPage {
    display: flex;
    width: 100%;
    /* height: 100vh; */
    flex-direction: column;
}

.landingPageBigImageAndButtonContainer {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    flex-direction: column;
    width: 89%;
    border-radius: 10px;
    height: 700px;
    background-image: url("../../images/beachimage.jpeg");
    background-size: cover;
    background-position: center;
}

.landingPageBigImageContainer {
    display: flex;
    justify-content: center;
    width: 100%;
    /* background-color: black; */
    align-items: center;
    height: 700px;
    margin-top: 100px;
}

.btn.imFlexibleButton {
    border-radius: 24px;
    height: 48px;
    cursor: pointer;
    border: none;
    margin-bottom: 60px;
}

.notSureWhereText {
    font-size: 48px;
    color: white;
    margin-bottom: 20px;
    
}

.landingPageCategorySection {
    display: flex;
    flex-direction: column;
    height: 539px;
    width: 100%;
    align-items: center;
}

.categorySectionContainer{
    width: 89%;
    /* background-color: rgb(247, 80, 80); */
    height: fit-content;
    display: flex;
    flex-direction: column;
}

.inspritationForYourText {
    margin-top: 100px;
    font-size: 33px;
    font-weight: 600;;
}

.landingPageCardSection {
    display: flex;
    flex-direction: row;
    height: fit-content;
    margin-top: 50px;
    margin-bottom: 10px;
}

.firstCategoryCard {
    display: flex;
    flex-direction: column;
    width: 25%;
    height: 402px;
    background-color: #DE3151;
    border-radius: 12px;
    margin-right: 30px;
    cursor: pointer;
}

.secondCategoryCard {
    display: flex;
    flex-direction: column;
    width: 25%;
    height: 402px;
    background-color: #D93B30;
    border-radius: 12px;
    margin-right: 30px;
    cursor: pointer;
}
.thirdCategoryCard {
    display: flex;
    flex-direction: column;
    width: 25%;
    height: 402px;
    background-color: #BC1A6E;
    border-radius: 12px;
    margin-right: 30px;
    cursor: pointer;
}

.rightCategoryCard {
    display: flex;
    flex-direction: column;
    width: 25%;
    height: 402px;
    background-color: rgb(235, 54, 14);
    border-radius: 12px;
    cursor: pointer;
}

.cardTitleLandingPage {
    display: flex;
    /* background-color: aqua; */
    height: 30%;
    justify-content: center;
    align-items: center;
    color: white;
    font-size: 32px;
    font-weight: 400;
}

/* @media screen 
    and (width: 390px) 
    and (height: 844px) 
    and (-webkit-device-pixel-ratio: 3) {
    .landingPageBigImageAndButtonContainer {
    width: 100%;
    padding: 0
}

.notSureWhereText {
    width: 80%;
    display: flex;
    justify-content: center;
}

.landingPageCategorySection {
    height: fit-content
}

.landingPageCardSection {
    flex-direction: column;
}

.firstCategoryCard {
    width: 100%;
}

.secondCategoryCard  {
    width: 100%;
    margin-top: 30px;
}

.thirdCategoryCard {
    width: 100%;
     margin-top: 30px;
}

.rightCategoryCard {
    width: 100%;
     margin-top: 30px;
}
} */


@media only screen
    and (max-device-width: 428px)
    and (max-device-height: 926px)
    and (-webkit-min-device-pixel-ratio: 3) 
    {

 .landingPageBigImageAndButtonContainer {
    width: 89%;
    padding: 0;
    height: 850px;
}

.btn.imFlexibleButton {
    height: 88px;
    width: 180px;
    font-size: 23px;
    border-radius: 44px;
}
.inspritationForYourText {
    font-size: 40px;
}

.landingPageBigImageContainer {
    margin-top: 170px;
    height:fit-content
}

.notSureWhereText {
    width: 100%;
    display: flex;
    justify-content: center;
    font-size: 55px;
}
.categorySectionContainer {
    overflow: hidden;
}

.landingPageCategorySection {
    height: fit-content
}

.landingPageCardSection {
    flex-direction: row;
    align-items: center;
    overflow-x: scroll;
    width: 100%;
    
}

.firstCategoryCard {
    min-width: 40%;
    margin-right: 20px;
    height: 450px;
}

.secondCategoryCard  {
    min-width: 40%;
    margin-right: 20px;
    height: 450px;
}

.thirdCategoryCard {
    min-width: 40%;
    margin-right: 20px;
    height: 450px;
}    

.rightCategoryCard {
    min-width: 40%;
    margin-right: 20px;
    height: 450px;
}
    } 

@media only screen and (max-width: 1245px) {
     .landingPageBigImageAndButtonContainer {
    width: 89%;
    padding: 0;
    height: 850px;
}

.btn.imFlexibleButton {
    border-radius: 24px;
    height: 48px;
    cursor: pointer;
    border: none;
    margin-bottom: 60px;
}
.inspritationForYourText {
    font-size: 40px;
}

.landingPageBigImageContainer {
    margin-top: 100px;
    height:fit-content
}

.notSureWhereText {
    width: 90%;
    display: flex;
    justify-content: center;
    font-size: 40px;
    /* background-color: blue; */
}
.categorySectionContainer {
    overflow: hidden;
}

.landingPageCategorySection {
    height: fit-content
}

.landingPageCardSection {
    flex-direction: row;
    align-items: center;
    overflow-x: scroll;
    width: 100%;
    
}

.firstCategoryCard {
    min-width: 305px;
    margin-right: 20px;
    height: 450px;
}

.secondCategoryCard  {
    min-width: 305px;
    margin-right: 20px;
    height: 450px;
}

.thirdCategoryCard {
    min-width: 305px;
    margin-right: 20px;
    height: 450px;
}    

.rightCategoryCard {
    min-width: 305px;
    margin-right: 20px;
    height: 450px;
}
}

